--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,11 +8,6 @@ jobs:
       matrix:
         python-version: [3.8]
     steps:
-      - name: Go to python directory
-        run: |
-          pwd
-          ls
-          cd ./src/main/resources
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -22,6 +17,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r /home/runner/work/jRDF2Vec/jRDF2Vec/src/main/resources/requirements.txt
       - name: Test with pytest
-        run: pytest
+        run: |
+          cd /home/runner/work/jRDF2Vec/jRDF2Vec/src/main/resources/
+          pytest 
