--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,7 @@
 
         <!-- GPG Signature on release -->
         <profile>
-            <id>release-sign-artifacts</id>
+            <id>release-sign-artifacts</id> <!-- mvn ... -P release-sign-artifacts,default -->
             <activation>
                 <property>
                     <name>performRelease</name>
