--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.uni-mannheim.informatik.dws</groupId>
     <artifactId>jrdf2vec</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,7 +41,7 @@
         <connection>scm:git:git://github.com/dwslab/jRDF2Vec.git</connection>
         <developerConnection>scm:git:git@github.com:dwslab/jRDF2Vec.git</developerConnection>
         <url>https://github.com/dwslab/jrdf2vec</url>
-        <tag>jrdf2vec-1.1</tag>
+        <tag>jrdf2vec-1.2</tag>
     </scm>
 
     <!-- Required for push to mvn central -->
@@ -262,7 +262,7 @@
 
         <!-- GPG Signature on release -->
         <profile>
-            <id>release-sign-artifacts</id> <!-- mvn ... -P release-sign-artifacts,default -->
+            <id>jrdf2vec-release</id> <!-- mvn -P release-sign-artifacts -->
             <activation>
                 <property>
                     <name>performRelease</name>
